--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 </head>
 <body>
     <div id="root">
+        <div class="row">
+            <div class="col s2">
+                <label for="">
+                    ID: <input type="text" name="" id="id">
+                </label>
+            </div>
+            <div class="col s4">
+                <label for="">
+                    Nombre <input type="text" id="nombre">
+                </label>
+            </div>
+            <div class="col s4">
+                <label for="">
+                 Descripcion   <input type="text" id="descripcion">
+                </label>
+            </div>
+            <div class="col s2">
+                <button id="guardar">
+                    guardar
+                </button>
+            </div>
+        </div>
         <div id="contentTable">
             <table id="tableData">
                 <thead>
