--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </div>
     <script src="js/utils/utils.js"></script>
     <script src="js/utils/main.js"></script>
+    <script src="js/clientHttp.js"></script>
     <script src="js/domMain.js"></script>
     <script src="js/domElements.js"></script>
 </body>
